[gd_scene load_steps=14 format=3 uid="uid://d0dyx7saustq0"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_5xl5s"]
[ext_resource type="Texture2D" uid="uid://dsa1nrxnnh3nl" path="res://Sprites/Player/player-tilesheet.png" id="2_kdvnm"]
[ext_resource type="PackedScene" uid="uid://cucjbsudtpmw" path="res://Utils/hurt_box.tscn" id="3_glsy7"]
[ext_resource type="PackedScene" uid="uid://0whnvxusnrcb" path="res://Player/hud.tscn" id="4_a3d5b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jghji"]
atlas = ExtResource("2_kdvnm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mbgn"]
atlas = ExtResource("2_kdvnm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wvrt"]
atlas = ExtResource("2_kdvnm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1cn5"]
atlas = ExtResource("2_kdvnm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wf3d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jghji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mbgn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wvrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1cn5")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yd70b"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xocda"]
radius = 180.469

[sub_resource type="CircleShape2D" id="CircleShape2D_2c6kh"]
radius = 30.0167

[sub_resource type="CircleShape2D" id="CircleShape2D_vmya7"]
radius = 7.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 32
collision_mask = 192
motion_mode = 1
script = ExtResource("1_5xl5s")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_8wf3d")
animation = &"move"
frame_progress = 0.126847

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yd70b")
debug_color = Color(0, 0, 0, 0.419608)

[node name="HurtBox" parent="." instance=ExtResource("3_glsy7")]

[node name="DisableTimer" parent="HurtBox" index="1"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="VisionArea" type="Area2D" parent="."]
collision_layer = 32768
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_xocda")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
shape = SubResource("CircleShape2D_2c6kh")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_vmya7")

[node name="WeaponParent" type="Node2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="WeaponTimers" type="Node" parent="Timers"]

[node name="SwordTimer" type="Timer" parent="Timers/WeaponTimers"]
wait_time = 2.0

[node name="ArrowTimer" type="Timer" parent="Timers/WeaponTimers"]

[node name="RegenTimer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="HUD" parent="." instance=ExtResource("4_a3d5b")]

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="timeout" from="Timers/WeaponTimers/SwordTimer" to="." method="_on_sword_timer_timeout"]
[connection signal="timeout" from="Timers/WeaponTimers/ArrowTimer" to="." method="_on_arrow_timer_timeout"]
[connection signal="timeout" from="Timers/RegenTimer" to="." method="_on_regen_timer_timeout"]

[editable path="HurtBox"]
